<resources>
    <string name="app_name">IoasysDiversidade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="join">Entrar</string>
    <string name="register_here">Ainda não tem uma conta? Cadastre-se <b><font color="#000000" >aqui</font></b></string>
    <string name="filters">Filtros</string>
    <string name="account_success">Sua conta foi criada com sucesso!</string>
    <string name="join_now">Acessar agora</string>
    <string name="go_back">Voltar</string>
    <string name="your_profile">Seu perfil</string>
    <string name="meet_consult">Conheça a consult.t</string>
    <string name="disclaimer">Nosso objetivo é criar um ambiente para que todas as pessoas possam se sentir seguras ao procurarem uma consulta.\n \nTodos os profissionais listados aqui passam por aprovação e cada nova avaliação é levada em consideração.\n \nSomos um time diverso que busca sempre entregar uma solução de valor para nossos usuários!\n \nSe você conhece algum profissional que compactua com nossos valores, não se esqueça de compartilhar a consul.t.\n \nEspalhe essa ideia para que possamos ter cada vez mais aliados!</string>
    <string name="your_consults">Suas consultas</string>
    <string name="nothing_here">Parece que não há nada aqui...</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices sed rhoncus tortor fusce blandit purus, amet nunc pellentesque. Elementum quam interdum bibendum urna. Vel dui, varius eget pharetra et in ac integer. Eget nam quam sed dictum turpis. Nisi nisi lectus sed.</string>
    <string name="about_me">Sobre mim:</string>
    <string name="ask">Solicitar consulta</string>
    <string name="confirmed">confirmado</string>
    <string name="name">Nome:</string>
    <string name="phone">Telefone</string>
    <string name="ocorreu_um_erro">Ocorreu um erro</string>
</resources>