<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/arrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/arrowLeft"
            app:layout_constraintStart_toEndOf="@+id/arrowLeft"
            app:layout_constraintTop_toTopOf="@+id/arrowLeft" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/your_consults"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="21dp"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/your_consults"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goBack" />

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_street"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_consults"
            app:layout_constraintVertical_bias="0.35" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emptyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nothing_here"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/emptyImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>