<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gradient_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_register_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/register_here"
                    android:textAlignment="center"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/login_logo"
                    app:layout_constraintStart_toStartOf="@+id/login_logo"
                    app:layout_constraintTop_toBottomOf="@+id/login_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/email"
                    android:textColor="@color/charcoal"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_register_text" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_email_inputLayout"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edit_text_bg"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_email_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textColor="@color/charcoal"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/login_email_inputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/login_email_inputLayout" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_password_inputLayout"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edit_text_bg"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password_label" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_submit_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/join"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_password_inputLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>