<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/arrowLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/arrowLeft"
            app:layout_constraintStart_toEndOf="@+id/arrowLeft"
            app:layout_constraintTop_toTopOf="@+id/arrowLeft" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="28dp">

                <TextView
                    android:id="@+id/professional_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="Daniel de Jesus"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_people_circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/professional_name" />

                <TextView
                    android:id="@+id/professional_crp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="CRP: 5194196841"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/professionalEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/professionalEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="daniel@ioasys.com"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="@id/professional_crp"
                    app:layout_constraintStart_toStartOf="@id/professional_crp"
                    app:layout_constraintTop_toBottomOf="@id/professional_crp" />

                <TextView
                    android:id="@+id/professional_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Atendimento: Remoto ou em Belo Horizonte"
                    android:textColor="@color/black"
                    android:textSize="21dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView" />

                <TextView
                    android:id="@+id/professional_about_me_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/about_me"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/professional_location" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/about_me_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#D1DBFF"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/professional_about_me_text">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/professional_readme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lorem_ipsum"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/ask"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_me_card" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>